# Modular-Smarthome-Terminal

./: .gitignore  DataSQL.py  Dockerfile  README.md  calendar_events.json  debugWidget.py  default_layout_client.json  docker-compose.yml  flaskServer.py  layout_client.json  mqtt.py  plugins.py  pyproject.toml  sensor_data.json  smt_database.db  sql.py  start.py  temperature_sensor_widget.py  widget.py
SMTplugins/: pluginImports.py
SMTplugins/ArrivingToday/: arrivingToday_route.py  arrivingToday_widget.py
SMTplugins/Calendar/: calendarWidget.py  token_cal.json
SMTplugins/FakeLight/: fakeLight_route.py  fakeLight_widget.py
SMTplugins/GoogleTasks/: credentials.json  googleTasks_route.py  googleTasks_widget.py  token.json
SMTplugins/Spotify/: spotify_route.py  spotify_widget.py
SMTplugins/TempSensor_Dummy/: flaskTempSensorDummy.py
SMTplugins/TimeZoneClock/: locations.json  timeZone_route.py  timeZone_widget.py
SMTplugins/Weather/: weather_city.json  weather_route.py
SMTplugins/clock/: clock_route.py  clock_widget.py
SMTplugins/date/: date_route.py  date_widget.py
static/: settings_stylesheet.css  start_page_style.css  stylesheet.css
static/js/: main.js  settings_layout.js
static/js/plugins/: calendar_script.js  (+9 more)
static/widgetCSS/: arriving_today_widget.css  calendar_widget.css  clock_widget.css  date_widget.css  fakeLight_widget.css  google_tasks_widget.css  package_widget.css  spotify_widget.css  temperature_sensor_widget.css  timeZone_widget.css  weather_widget.css
templates/: calendar_widget.html  index.html  settingspage.html  start_page.html
