[project]
name = "modular-smarthome-terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "flask==3.1.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "musicbrainzngs==0.7.1",
    "werkzeug==3.1.5",
]
