[project]
name = "modular-smarthome-terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "flask==3.1.2",
    "geopy>=2.4.1",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "musicbrainzngs==0.7.1",
    "paho-mqtt>=2.1.0",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "werkzeug==3.1.5",
]
